--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,30 @@
 // Specific CSS for your home-page
+#services {
+  img {
+    width: 100%;
+    object-fit: cover;
+    height: 40vh;
+  }
+
+  h2 {
+    font-weight: bold;
+  }
+}
+
+
+#sponsors {
+  img {
+    padding: 20px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin-right: 10px;
+  }
+}
+
+.post-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
