finish first aproach

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1591701284171-b6b4af1ce95a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2800&q=80);">
   <div class="container text-center">
     <h1><strong>GARBO</strong></h1>
     <p>servicios integrales</p>
@@ -19,4 +19,10 @@
 </section>
 <section id="company">
   <%= render 'company' %>
+</section>
+<section id="carousel">
+  <%= render 'carousel' %>
+</section>
+<section id="contact">
+  <%= render 'contact' %>
 </section>
