--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,3 +28,20 @@
   grid-gap: 16px;
 }
 
+#carousel {
+  .carousel {
+    img {
+      width: 100%;
+      height: 700px;
+      object-fit: cover;
+    }
+  }
+}
+
+@media(max-width: 775px) {
+  .post-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 16px;
+  }
+}
