Finish some details

--- a/app/views/pages/_company.html.erb
+++ b/app/views/pages/_company.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-success py-5">
-  <h2 class="text-center py-5">Quienes Somos</h2>
+  <h2 class="text-center py-5" id="page-title">Quienes Somos</h2>
   <div class="container">
     <p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Commodi libero odit dolore minima vitae sed officia perspiciatis accusantium soluta veniam eos sunt, porro ullam! Asperiores aspernatur recusandae ipsam velit commodi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maiores impedit, amet minima veniam, debitis aspernatur iusto quae labore ipsam dolore voluptates, ut! Incidunt officia iste sunt, deserunt distinctio, ea! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ad, vel dicta doloremque a amet aut provident consequuntur nesciunt, mollitia reprehenderit quasi assumenda, magni, qui et inventore quam distinctio odit!</p>
   </div>
