--- a/app/views/pages/_posts.html.erb
+++ b/app/views/pages/_posts.html.erb
@@ -1,4 +1,4 @@
-<h2 class="py-5 text-center">Noticias</h2>
+<h2 class="py-5 text-center" id="page-title">Noticias</h2>
 <div class="container">
   <div class="container post-container">
     <% @posts.each do |post| %>
