--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -1,9 +1,32 @@
-<h2 class="py-5 text-center">Nuestros Clientes</h2>
-<div class="bg-success py-5">
-  <div class="container">
-   <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
-   <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-   <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
-   <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
+<h2 class="py-5 text-center" id="page-title">Nuestros Clientes</h2>
+<div class="bg-success py-5 px-2">
+  <div class="scrolling-wrapper">
+    <div class="image-sponsor">
+      <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
+    </div>
+    <div class="image-sponsor">
+      <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+    </div>
+    <div class="image-sponsor">
+      <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
+    </div>
+    <div class="image-sponsor">
+      <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
+    </div>
+    <div class="image-sponsor">
+      <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
+    </div>
+    <div class="image-sponsor">
+      <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+    </div>
+    <div class="image-sponsor">
+      <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
+    </div>
+    <div class="image-sponsor">
+      <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
+    </div>
   </div>
 </div>
+
+
+
