--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,7 @@
 // Specific CSS for your home-page
+#page-title {
+  font-weight: bold;
+}
 #services {
   img {
     width: 100%;
@@ -6,7 +9,7 @@
     height: 40vh;
   }
 
-  h2 {
+  h3 {
     font-weight: bold;
   }
 }
@@ -19,6 +22,16 @@
     height: 200px;
     object-fit: cover;
     margin-right: 10px;
+  }
+
+  .scrolling-wrapper {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+    .image-sponsor {
+      display: inline-block;
+    }
   }
 }
 
@@ -38,10 +51,32 @@
   }
 }
 
-@media(max-width: 775px) {
+@media(max-width: 575px) {
+
+  #page-title {
+    font-weight: bold;
+    font-size: 24px;
+  }
+
   .post-container {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 16px;
+  }
+
+  #services {
+    img {
+      width: 100%;
+      object-fit: cover;
+      height: 30vh;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 14px;
+    }
   }
 }
