--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -1,25 +1,25 @@
-<h2 class="py-5 text-center">Nuestros servicios</h2>
+<h2 class="py-5 text-center" id="page-title">Nuestros servicios</h2>
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-6">
       <img src="https://images.unsplash.com/photo-1464295440335-ee082a75ccca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div>
-        <h2>Lorem Algo</h2>
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Lorem Algo</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div>
-        <h2>Lorem Algo</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
-      </div>
-    </div>
+  <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
       <img src="https://images.unsplash.com/photo-1566781002991-9f3ef739309b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80" alt="">
+    </div>
+    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Lorem Algo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -27,21 +27,21 @@
       <img src="https://images.unsplash.com/photo-1550091345-8c561a255eca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div>
-        <h2>Lorem Algo</h2>
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Lorem Algo</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div>
-        <h2>Lorem Algo</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
-      </div>
-    </div>
+  <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
       <img src="https://images.unsplash.com/photo-1464295440335-ee082a75ccca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
+    </div>
+    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Lorem Algo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
+      </div>
     </div>
   </div>
 </div>
