--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,6 +24,6 @@
   <%= render 'carousel' %>
 </section>
 <section id="contact">
-  <%= render 'contact' %>
+  <%= render 'contacts/new' %>
 </section>
 <%= render 'shared/footer' %>
