--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -15,13 +15,13 @@
     <p>Telefono</p>
     <%= f.input :phone, as: :numeric, input_html: { class: "form-control"}, label: false %>
     <p>Email</p>
-    <%= f.input :email, input_html: { class: "form-control mb-3"}, label: false %>
+    <%= f.input :email, input_html: { class: "form-control"}, label: false %>
     <p>Mensaje</p>
-    <%= f.input :message, :as => :text, input_html: { class: "form-control form-control mb-3", id:"exampleFormControlTextarea1", rows:"7" }, label: false %>
+    <%= f.input :message, :as => :text, input_html: { class: "form-control form-control", id:"exampleFormControlTextarea1", rows:"7" }, label: false %>
     <div class="d-none">
       <%= f.input :nickname %>
     </div>
-    <%= f.submit 'Enviar mensaje', class: 'btn btn-success btn-block btn-main m-0 text-white' %>
+    <%= f.submit 'Enviar mensaje', class: 'btn btn-success btn-block btn-main m-0 text-white mt-3' %>
     <% end %>
   </div>
 </div>
