--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,25 @@
-<div class="bg-white p-5">
-  <% if user_signed_in? %>
-  <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-  <% else %>
-  <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-  <% end %>
+<div class="bg-info " id="footer">
+  <div class="d-flex align-items-center justify-content-center py-4">
+    <%= link_to "https://www.facebook.com/GARBO-Espacios-Verdes-198969213999917", target: "_blank" do  %>
+      <i class="fab fa-facebook-square h1 mr-3"></i>
+    <% end %>
+    <%= link_to "https://www.instagram.com/garbo.svsintegrales/", target: "_blank" do %>
+      <i class="fab fa-instagram-square h1 mr-3"></i>
+    <% end %>
+    <i class="fab fa-whatsapp-square h1"></i>
+  </div>
+  <div class="container border-top border-white py-3">
+    <% if user_signed_in? %>
+    <h2><strong><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-warning" %></strong> </h2>
+
+    <% else %>
+    <div class="text-center text-md-left d-md-flex justify-content-between">
+      <p><i class="far fa-copyright h6"></i> 2020 - <%= link_to 'GARBO', new_user_session_path  %> Todos los derechos reservados</p>
+      <p class="pt-2 pt-md-0">Made by <strong> <%= link_to 'GV', 'http://www.guillermo-varela.com', target: "_blank"  %></strong></p>
+    </div>
+    <% end %>
+  </div>
 </div>
+
+
+
