--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,8 @@
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
-$yellow: #FFC65A;
+$yellow: #3D3D3D;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #518232;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
