Finish crud post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,9 @@
+<% if user_signed_in? %>
+<div class="p-5">
+  <%= link_to 'Editar Noticia', edit_post_path(@post), class: "btn btn-dark btn-block mb-3"  %>
+  <%= link_to 'Destruir Noticia', @post, method: :delete, data: { confirm: 'Estas seguro de eliminar la noticia' } , class: 'btn btn-danger btn-block' %>
+</div>
+<% end %>
 <div class="container py-5 text-center">
   <h2 class="font-weight-bold"><%= @post.title %></h2>
   <h5><%= @post.subtitle %></h5>
