--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,8 +10,9 @@
   </div>
   <div class="container border-top border-white py-3">
     <% if user_signed_in? %>
-    <h2><strong><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-warning" %></strong> </h2>
-
+    <div class="text-center">
+      <h2><%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "btn btn-danger btn-lg" %></h2>
+    </div>
     <% else %>
     <div class="text-center text-md-left d-md-flex justify-content-between">
       <p><i class="far fa-copyright h6"></i> 2020 - <%= link_to 'GARBO', new_user_session_path  %> Todos los derechos reservados</p>
