--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -1,4 +1,4 @@
-<h2 class="py-5 text-center" id="page-title">Contacto</h2>
+<h2 class="py-5 py-md-6 text-center" id="page-title">Contacto</h2>
 <div class="container">
   <div class="forms">
     <%= simple_form_for @contact, remote: true do |f| %>
