--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -1,4 +1,4 @@
-<h2 class=" text-center py-5" id="page-title">Nuestras Obras</h2>
+<h2 class="text-center py-5 py-md-6" id="page-title">Nuestras Obras</h2>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
