--- a/app/views/pages/_company.html.erb
+++ b/app/views/pages/_company.html.erb
@@ -1,7 +1,8 @@
-<div class="bg-success py-5">
-  <h2 class="text-center py-5" id="page-title">Quienes Somos</h2>
-  <div class="container">
-    <p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Commodi libero odit dolore minima vitae sed officia perspiciatis accusantium soluta veniam eos sunt, porro ullam! Asperiores aspernatur recusandae ipsam velit commodi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maiores impedit, amet minima veniam, debitis aspernatur iusto quae labore ipsam dolore voluptates, ut! Incidunt officia iste sunt, deserunt distinctio, ea! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ad, vel dicta doloremque a amet aut provident consequuntur nesciunt, mollitia reprehenderit quasi assumenda, magni, qui et inventore quam distinctio odit!</p>
+<div class="bg-success">
+  <h2 class="text-center pt-5 pt-md-6 pb-5" id="page-title">Quienes Somos</h2>
+  <div class="px-4 px-lg-8 pb-6 container">
+    <p><strong>GARBO</strong> es una empresa dedicada al cuidado y manejo integral de espacios verdes.
+      Ofrecemos un servicio de excelencia a nuestros clientes, creando equipos de profesionales altamente capacitados, desarrollándolos con la mas alta tecnología disponible en el mercado.<br>Desarrollamos un modelo de gestión orientado a la excelencia, que funciona con una estructura organizada en departamentos especializados, dirigidos por un plantel de profesionales altamente capacitados y comprometidos con el medio ambiente y la responsabilidad social. Asumimos el constante desafío de lograr que nuestras prácticas respondan a altos estándares de calidad y cuidado del medio ambiente.
+    </p>
   </div>
 </div>
-
