--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -1,4 +1,4 @@
-<h2 class="py-5 text-center" id="page-title">Nuestros Clientes</h2>
+<h2 class="py-5 py-md-6 text-center" id="page-title">Nuestros Clientes</h2>
 <div class="bg-success py-5 px-2">
   <div class="scrolling-wrapper">
     <div class="image-sponsor">
