--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,13 +8,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "Quienes Somos", root_path( anchor: "company"), class: "nav-link" %>
+        <%= link_to "Quienes somos", root_path( anchor: "company"), class: "nav-link" %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to "Servicios", root_path( anchor: "services"), class: "nav-link" %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to "Clientes", root_path( anchor: "sponsors"), class: "nav-link" %>
       </li>
       <li class="nav-item active">
         <%= link_to "Noticias", posts_path, class: "nav-link" %>
       </li>
       <li class="nav-item active">
         <%= link_to "Contacto", root_path( anchor: "contact"), class: "nav-link" %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to "Inicio", root_path, class: "nav-link" %>
       </li>
     </ul>
   </div>
