--- a/app/views/pages/_posts.html.erb
+++ b/app/views/pages/_posts.html.erb
@@ -6,6 +6,6 @@
     <% end %>
   </div>
   <div class="text-center py-5">
-    <%= link_to "Mas noticias", posts_path, class: "btn btn-success py-2 px-4 text-white"  %>
+    <%= link_to "Mas noticias", posts_path, class: "btn btn-success pt-2 px-4  mb-md-5 text-white"  %>
   </div>
 </div>
