--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,6 @@ $red: #FD1015;
 $blue: #167FFB;
 $yellow: #3D3D3D;
 $orange: #E67E22;
-$green: #518232;
+$green: #5B9832;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
