--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -1,32 +1,86 @@
 <h2 class="py-5 py-md-6 text-center" id="page-title">Nuestros Clientes</h2>
 <div class="bg-success py-5 px-2">
-  <div class="scrolling-wrapper">
-    <div class="image-sponsor">
-      <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
+  <div id="carouselExampleIndicators" class="carousel slide py-5" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="d-flex justify-content-center">
+          <div class="d-none d-md-block">
+            <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="...">
+          </div>
+          <div class="d-none d-md-block">
+            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          </div>
+          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="d-flex justify-content-center">
+          <div class="d-none d-md-block">
+            <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="...">
+          </div>
+          <div class="d-none d-md-block">
+            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          </div>
+          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="d-flex justify-content-center">
+          <div class="d-none d-md-block">
+            <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="...">
+          </div>
+          <div class="d-none d-md-block">
+            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          </div>
+          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+        </div>
+      </div>
     </div>
-    <div class="image-sponsor">
-      <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-    </div>
-    <div class="image-sponsor">
-      <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
-    </div>
-    <div class="image-sponsor">
-      <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
-    </div>
-    <div class="image-sponsor">
-      <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
-    </div>
-    <div class="image-sponsor">
-      <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-    </div>
-    <div class="image-sponsor">
-      <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
-    </div>
-    <div class="image-sponsor">
-      <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
 
 
 
+<!-- <div class="scrolling-wrapper d-md-none">
+  <div class="image-sponsor">
+    <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
+  </div>
+  <div class="image-sponsor">
+    <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+  </div>
+  <div class="image-sponsor">
+    <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
+  </div>
+  <div class="image-sponsor">
+    <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
+  </div>
+  <div class="image-sponsor">
+    <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
+  </div>
+  <div class="image-sponsor">
+    <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+  </div>
+  <div class="image-sponsor">
+    <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
+  </div>
+  <div class="image-sponsor">
+    <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
+  </div>
+</div>
+ -->
