--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,9 @@
-<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1591701284171-b6b4af1ce95a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2800&q=80);">
+<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1559721849-947ab8ad1ced?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
   <div class="container text-center">
-    <h1><strong>GARBO</strong></h1>
-    <p>servicios integrales</p>
-    <div class="d-flex justify-content-center">
-      <a class="btn btn-success mr-3" href="#">Quienes Somos</a>
-      <a class="btn btn-outline-success" href="#">Contacto</a>
+    <img src="https://res.cloudinary.com/san-patricio/image/upload/c_scale,w_920/v1603753433/Logo_Garbo_Negativo_f3nack.png" alt="">
+    <div class="d-flex justify-content-center banner-btn">
+      <a class="btn btn-success mr-3 px-4" href="#company">Quienes Somos</a>
+      <a class="btn btn-outline-success px-4" id="btn-banner" href="#contact">Contacto</a>
     </div>
   </div>
 </div>
