--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
   <div class="container text-center">
     <img src="https://res.cloudinary.com/san-patricio/image/upload/c_scale,w_920/v1603753433/Logo_Garbo_Negativo_f3nack.png" alt="">
     <div class="d-flex justify-content-center banner-btn">
-      <a class="btn btn-success mr-3 px-4" href="#company">Quienes Somos</a>
-      <a class="btn btn-outline-success px-4" id="btn-banner" href="#contact">Contacto</a>
+      <a class="btn btn-success mr-3 px-3 px-lg-4" id="btn-banner-1" href="#company">Quienes Somos</a>
+      <a class="btn btn-outline-success px-3 px-lg-4" id="btn-banner" href="#contact">Contacto</a>
     </div>
   </div>
 </div>
