--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
   <%= link_to 'Destruir Noticia', @post, method: :delete, data: { confirm: 'Estas seguro de eliminar la noticia' } , class: 'btn btn-danger btn-block' %>
 </div>
 <% end %>
-<div class="container py-5 text-center">
+<div class="container py-5 text-center mt-6">
   <h2 class="font-weight-bold"><%= @post.title %></h2>
   <h5><%= @post.subtitle %></h5>
   <hr>
