--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -1,13 +1,13 @@
 <h2 class="text-center py-5 py-md-6" id="page-title">Nuestras Obras</h2>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselSecondSection" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselSecondSection" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselSecondSection" data-slide-to="1"></li>
+    <li data-target="#carouselSecondSection" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://images.unsplash.com/photo-1532262757596-f93a9d92f879?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="First slide">
+      <img class="d-block w-100" src="https://res.cloudinary.com/san-patricio/image/upload/v1603829156/cancha_2_jm4j2m.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="https://images.unsplash.com/photo-1568194157720-8bbe7114ebe8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="Second slide">
@@ -16,11 +16,11 @@
       <img class="d-block w-100" src="https://images.unsplash.com/photo-1584091780908-8eb3be740727?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="Third slide">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselSecondSection" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselSecondSection" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
