--- a/app/views/pages/_company.html.erb
+++ b/app/views/pages/_company.html.erb
@@ -1,8 +1,8 @@
 <div class="bg-success">
-  <h2 class="text-center pt-5 pt-md-6 pb-5" id="page-title">Quienes Somos</h2>
+  <h2 class="text-center pt-5 pt-md-6 pb-5" id="page-title">La Empresa</h2>
   <div class="px-4 px-lg-8 pb-6 container">
-    <p><strong>GARBO</strong> es una empresa dedicada al cuidado y manejo integral de espacios verdes.
-      Ofrecemos un servicio de excelencia a nuestros clientes, creando equipos de profesionales altamente capacitados, desarrollándolos con la mas alta tecnología disponible en el mercado.<br>Desarrollamos un modelo de gestión orientado a la excelencia, que funciona con una estructura organizada en departamentos especializados, dirigidos por un plantel de profesionales altamente capacitados y comprometidos con el medio ambiente y la responsabilidad social. Asumimos el constante desafío de lograr que nuestras prácticas respondan a altos estándares de calidad y cuidado del medio ambiente.
+    <p>
+      <strong>GARBO S.A.S.</strong>  es una empresa dedicada a los servicios de espacios verdes, podas, pinturas y pisos industriales, limpieza y fumigación.<br>Contamos con profesionales capacitados y maquinaria de última tecnología, lo cual nos permite brindar soluciones integrales a nuestros clientes con un alto grado de calidad en los servicios.<br>Creemos que la seriedad y el compromiso con los proyectos que tomamos son las claves del continuo crecimiento de la empresa. Sobre esa línea caminamos y pretendemos seguir dando pasos en esa dirección para la sostenibilidad en el largo plazo.
     </p>
   </div>
 </div>
