--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -6,63 +6,52 @@
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Corte de césped</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
+        <h3>Espacios Verdes</h3>
+        <p>Diseño, construcción, mantenimiento, riego, control fitosanitario, desmalezado, forestación.</p>
       </div>
     </div>
   </div>
   <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1566781002991-9f3ef739309b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80" alt="">
-    </div>
-    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Desmalezamiento</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1550091345-8c561a255eca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" alt="">
-    </div>
-    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Control de plagas y malezas</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
-      </div>
-    </div>
-  </div>
-  <div class="row flex-row-reverse">
-    <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1464295440335-ee082a75ccca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
-    </div>
-    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Diseño y contrucción</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1550091345-8c561a255eca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" alt="">
+      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_668/v1605133022/man-using-chainsaw-to-cut-tree_pje7ak.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
         <h3>Podas</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
+        <p>Cercos perimetrales, podas de altura, talados, traslado de grandes ejemplares.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_680/v1605133176/trabajos-de-fumigacion-contra-mosquitos___70r4l8Ei_1256x620__1_inmxph.jpg" alt="">
+    </div>
+    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Fumigación/Control de plagas</h3>
+        <p>Control de roedores, fumigación contra mosquitos, desinfección, control fitosanitario.</p>
       </div>
     </div>
   </div>
   <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1566781002991-9f3ef739309b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80" alt="">
+      <img src="https://images.unsplash.com/photo-1421940943431-d392fcc1079f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Maestranza</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga distinctio veniam molestias voluptatibus temporibus vero mollitia ducimus consectetur quia inventore maiores laboriosam amet voluptas, corrupti ipsa nihil possimus blanditiis sit?lorem</p>
+        <h3>Limpieza</h3>
+        <p>Limpieza de oficinas y edificios, barrido de calles y veredas, personal de maestranza, limpieza en altura.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <img src="https://images.unsplash.com/photo-1474767821094-a8fe9d8c8fdd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
+    </div>
+    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Pinturas y pisos industriales</h3>
+        <p>Demarcación vial, estructuras metálicas y de hormigón, tanques de almacenamiento, piso con mortero de resina epoxi y poliuretano, piso con productos antiácidos y autonivelantes.</p>
       </div>
     </div>
   </div>
