--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -10,28 +10,28 @@
       <div class="carousel-item active">
         <div class="d-flex justify-content-center">
           <div class="d-none d-md-block">
-            <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="...">
+            <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQHrEdGuZWTMSg/company-logo_200_200/0?e=2159024400&v=beta&t=0zcCsyhFQCCqXL5ZkBzKmvOCz7forNgmT2QPyI-2S2A" alt="...">
           </div>
           <div class="d-none d-md-block">
-            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134286/0_hnqgqz.png" alt="">
           </div>
-          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="">
+          <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="">
         </div>
       </div>
       <div class="carousel-item">
         <div class="d-flex justify-content-center">
           <div class="d-none d-md-block">
-            <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="...">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134859/CthghMI3vbG737TN07NNtBtL5rpSyz5WeEX59ZIi0HLZLA0SAUzJ9FVkusdKaTjCOTw6mrpTsQ80ZUAjSR9sCwGnc7Orqw6dYYVOUvHT6Hcw_ks5udl.jpg" alt="...">
           </div>
           <div class="d-none d-md-block">
-            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134987/fvmx11dt8empuxszllbr.jpg" alt="">
           </div>
           <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
           <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item d-md-none">
         <div class="d-flex justify-content-center">
           <div class="d-none d-md-block">
             <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="...">
