--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "Quienes somos", root_path( anchor: "company"), class: "nav-link" %>
+        <%= link_to "La Empresa", root_path( anchor: "company"), class: "nav-link" %>
       </li>
       <li class="nav-item active">
         <%= link_to "Servicios", root_path( anchor: "services"), class: "nav-link" %>
