Carousel service finish

--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -1,86 +1,82 @@
 <h2 class="py-5 py-md-6 text-center" id="page-title">Nuestros Clientes</h2>
 <div class="bg-success py-5 px-2">
-  <div id="carouselExampleIndicators" class="carousel slide py-5" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="d-flex justify-content-center">
-          <div class="d-none d-md-block">
-            <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQHrEdGuZWTMSg/company-logo_200_200/0?e=2159024400&v=beta&t=0zcCsyhFQCCqXL5ZkBzKmvOCz7forNgmT2QPyI-2S2A" alt="...">
+  <div class="d-none d-md-block" id="carousel-desktop">
+    <div id="carouselExampleIndicators" class="carousel slide py-5" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="d-flex justify-content-center">
+            <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQHrEdGuZWTMSg/company-logo_200_200/0?e=2159024400&v=beta&t=0zcCsyhFQCCqXL5ZkBzKmvOCz7forNgmT2QPyI-2S2A" alt="di-bacco">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134286/0_hnqgqz.png" alt="cencosud">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="belgrano-cargas">
           </div>
-          <div class="d-none d-md-block">
-            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134286/0_hnqgqz.png" alt="">
-          </div>
-          <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="">
-          <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="">
         </div>
-      </div>
-      <div class="carousel-item">
-        <div class="d-flex justify-content-center">
-          <div class="d-none d-md-block">
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134859/CthghMI3vbG737TN07NNtBtL5rpSyz5WeEX59ZIi0HLZLA0SAUzJ9FVkusdKaTjCOTw6mrpTsQ80ZUAjSR9sCwGnc7Orqw6dYYVOUvHT6Hcw_ks5udl.jpg" alt="...">
-          </div>
-          <div class="d-none d-md-block">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134987/fvmx11dt8empuxszllbr.jpg" alt="">
-          </div>
-          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-        </div>
-      </div>
-      <div class="carousel-item d-md-none">
-        <div class="d-flex justify-content-center">
-          <div class="d-none d-md-block">
-            <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="...">
-          </div>
-          <div class="d-none d-md-block">
+            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
             <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
           </div>
-          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-          <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+          </div>
         </div>
       </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+  </div>
+  <div class="d-md-none" id="carousel-mobile">
+    <div id="carouselMobile" class="carousel slide py-5" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselMobile" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselMobile" data-slide-to="1"></li>
+        <li data-target="#carouselMobile" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="d-flex justify-content-center">
+            <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQHrEdGuZWTMSg/company-logo_200_200/0?e=2159024400&v=beta&t=0zcCsyhFQCCqXL5ZkBzKmvOCz7forNgmT2QPyI-2S2A" alt="di-bacco">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134286/0_hnqgqz.png" alt="cencosud">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134859/CthghMI3vbG737TN07NNtBtL5rpSyz5WeEX59ZIi0HLZLA0SAUzJ9FVkusdKaTjCOTw6mrpTsQ80ZUAjSR9sCwGnc7Orqw6dYYVOUvHT6Hcw_ks5udl.jpg" alt="...">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134987/fvmx11dt8empuxszllbr.jpg" alt="">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="belgrano-cargas">
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselMobile" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselMobile" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
 </div>
 
-
-
-<!-- <div class="scrolling-wrapper d-md-none">
-  <div class="image-sponsor">
-    <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
-  </div>
-  <div class="image-sponsor">
-    <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-  </div>
-  <div class="image-sponsor">
-    <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
-  </div>
-  <div class="image-sponsor">
-    <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
-  </div>
-  <div class="image-sponsor">
-    <img src="https://img2.freepng.es/20180723/vqj/kisspng-logo-brand-adidas-sponsor-shoe-brands-5b55b17db95930.9640895815323426537592.jpg" alt="">
-  </div>
-  <div class="image-sponsor">
-    <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-  </div>
-  <div class="image-sponsor">
-    <img src="https://pngimg.com/uploads/car_logo/car_logo_PNG1666.png" alt="">
-  </div>
-  <div class="image-sponsor">
-    <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_Black.png" alt="">
-  </div>
-</div>
- -->
