--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,21 +17,11 @@
 
 #sponsors {
   img {
-    padding: 20px;
+    padding: 10px;
     width: 200px;
-    height: 200px;
+    height: 180px;
     object-fit: cover;
     margin-right: 10px;
-  }
-
-  .scrolling-wrapper {
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-
-    .image-sponsor {
-      display: inline-block;
-    }
   }
 }
 
@@ -51,15 +41,22 @@
   }
 }
 
-
-
-
 @media (max-width: 991.98px) {
   .post-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 24px;
   }
+
+  #sponsors {
+  img {
+    padding: 5px;
+    width: 170px;
+    height: 140px;
+    object-fit: cover;
+    margin-right: 10px;
+  }
+}
 }
 
 
