--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -35,7 +35,7 @@
   .carousel {
     img {
       width: 100%;
-      height: 700px;
+      height: 660px;
       object-fit: cover;
     }
   }
@@ -94,4 +94,14 @@
       font-size: 14px;
     }
   }
+
+  #carousel {
+  .carousel {
+    img {
+      width: 100%;
+      height: 520px;
+      object-fit: cover;
+    }
+  }
+}
 }
