--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -1,27 +1,79 @@
 <h2 class="text-center py-5 py-md-6" id="page-title">Nuestras Obras</h2>
-<div id="carouselSecondSection" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselSecondSection" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselSecondSection" data-slide-to="1"></li>
-    <li data-target="#carouselSecondSection" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://res.cloudinary.com/san-patricio/image/upload/v1603829156/cancha_2_jm4j2m.jpg" alt="First slide">
+<div class="d-none d-md-block">
+  <div id="carouselSecondSection" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselSecondSection" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselSecondSection" data-slide-to="1"></li>
+      <li data-target="#carouselSecondSection" data-slide-to="2"></li>
+      <li data-target="#carouselSecondSection" data-slide-to="3"></li>
+      <li data-target="#carouselSecondSection" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://res.cloudinary.com/san-patricio/image/upload/v1603829156/cancha_2_jm4j2m.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605534306/Captura_de_Pantalla_2020-11-16_a_la_s_10.42.23_thayzc.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_1391/v1605535201/Captura_de_Pantalla_2020-11-16_a_la_s_10.59.02_qwurao.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_1342/v1605535447/Captura_de_Pantalla_2020-11-16_a_la_s_11.02.45_hgxqdy.jpg" alt="Fourth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_1367/v1605535855/Captura_de_Pantalla_2020-11-16_a_la_s_11.09.55_qyqucw.jpg" alt="Fifth slide">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://images.unsplash.com/photo-1568194157720-8bbe7114ebe8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://images.unsplash.com/photo-1584091780908-8eb3be740727?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="Third slide">
-    </div>
+    <a class="carousel-control-prev" href="#carouselSecondSection" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselSecondSection" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carouselSecondSection" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselSecondSection" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
+<div class="d-md-none">
+  <div id="carouselSecondSectionMobile" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselSecondSectionMobile" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselSecondSectionMobile" data-slide-to="1"></li>
+      <li data-target="#carouselSecondSectionMobile" data-slide-to="2"></li>
+      <li data-target="#carouselSecondSectionMobile" data-slide-to="3"></li>
+      <li data-target="#carouselSecondSectionMobile" data-slide-to="4"></li>
+      <li data-target="#carouselSecondSectionMobile" data-slide-to="5"></li>
+      <li data-target="#carouselSecondSectionMobile" data-slide-to="6"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://res.cloudinary.com/san-patricio/image/upload/v1603829156/cancha_2_jm4j2m.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605534730/WhatsApp_Image_2018-06-13_at_11.23.19_AM_uxlhcu.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605534730/WhatsApp_Image_2018-06-13_at_11.23.32_AM_1_sajxev.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605534732/WhatsApp_Image_2018-10-23_at_11.30.44_AM_ubpadz.jpg" alt="Fourth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605534731/WhatsApp_Image_2018-06-13_at_11.23.35_AM_1_kd8sm7.jpg" alt="Fifht slide">
+      </div>
+       <div class="carousel-item">
+        <img class="d-block w-100" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605534734/WhatsApp_Image_2018-10-23_at_11.30.45_AM_btroex.jpg" alt="Six slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselSecondSectionMobile" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselSecondSectionMobile" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
