--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
     <%= link_to "https://www.instagram.com/garbo.svsintegrales/", target: "_blank" do %>
       <i class="fab fa-instagram-square h1 mr-3"></i>
     <% end %>
-    <i class="fab fa-whatsapp-square h1"></i>
+    <a href="https://api.whatsapp.com/send?phone=5493815342477" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp-square h1"></i></a>
   </div>
   <div class="container border-top border-white py-3">
     <% if user_signed_in? %>
