--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,6 +20,9 @@
         <%= link_to "Noticias", posts_path, class: "nav-link" %>
       </li>
       <li class="nav-item active">
+        <%= link_to "Obras", root_path( anchor: "carousel"), class: "nav-link" %>
+      </li>
+      <li class="nav-item active">
         <%= link_to "Contacto", root_path( anchor: "contact"), class: "nav-link" %>
       </li>
     </ul>
