--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -24,17 +24,6 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_680/v1605133176/trabajos-de-fumigacion-contra-mosquitos___70r4l8Ei_1256x620__1_inmxph.jpg" alt="">
-    </div>
-    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Fumigación/Control de plagas</h3>
-        <p>Control de roedores, fumigación contra mosquitos, desinfección, control fitosanitario.</p>
-      </div>
-    </div>
-  </div>
-  <div class="row flex-row-reverse">
-    <div class="col-12 col-md-6">
       <img src="https://images.unsplash.com/photo-1421940943431-d392fcc1079f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
@@ -44,14 +33,14 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
       <img src="https://images.unsplash.com/photo-1474767821094-a8fe9d8c8fdd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
         <h3>Pinturas y pisos industriales</h3>
-        <p>Demarcación vial, estructuras metálicas y de hormigón, tanques de almacenamiento, piso con mortero de resina epoxi y poliuretano, piso con productos antiácidos y autonivelantes.</p>
+        <p> Estructuras metálicas y de hormigón, tanques de almacenamiento, demarcación vial, piso con mortero de resina epoxi y poliuretano, piso con productos antiácidos y autonivelantes.</p>
       </div>
     </div>
   </div>
